--- a/include/irr/config/BuildConfigOptions.h.in
+++ b/include/irr/config/BuildConfigOptions.h.in
@@ -1,6 +1,8 @@
 #ifndef __IRR_BUILD_CONFIG_OPTIONS_H_INCLUDED__
 #define __IRR_BUILD_CONFIG_OPTIONS_H_INCLUDED__
 
+#cmakedefine _IRR_DEBUG
+
 // architecture
 #cmakedefine __IRR_COMPILE_WITH_ARM_SIMD_
 
