--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -35,10 +35,25 @@ option(BUILD_EXECUTABLES "jpeg" OFF)
 option(BUILD_TESTS "jpeg" OFF)
 add_subdirectory(libjpeg libjpeg EXCLUDE_FROM_ALL)
 
+add_library(zlib OBJECT
+	zlib/adler32.c
+	zlib/crc32.c
+	zlib/deflate.c
+	zlib/infback.c
+	zlib/inffast.c
+	zlib/inflate.c
+	zlib/inftrees.c
+	zlib/trees.c
+	zlib/uncompr.c
+	#zlib/zcompress.c
+	zlib/zutil.c
+)
+
 #manipulating libpng cmake options from within cmake script
 option(PNG_BUILD_ZLIB "Custom zlib Location, else find_package is used" OFF)
 set(PNG_BUILD_ZLIB ON)
 set(ZLIB_INCLUDE_DIR ${THIRD_PARTY_SOURCE_DIR}/zlib) #for pnglib
+set(ZLIB_LIBRARY "$<TARGET_OBJECTS:zlib>") #for pnglib
 option(PNG_SHARED "Build shared lib" OFF)
 option(PNG_TESTS  "Build libpng tests" OFF)
 add_subdirectory(libpng libpng EXCLUDE_FROM_ALL)
@@ -58,20 +73,6 @@ add_library(lz4 OBJECT
 	lz4/lib/lz4frame.c
 	lz4/lib/lz4hc.c
 	lz4/lib/xxhash.c
-)
-
-add_library(zlib OBJECT
-	zlib/adler32.c
-	zlib/crc32.c
-	zlib/deflate.c
-	zlib/infback.c
-	zlib/inffast.c
-	zlib/inflate.c
-	zlib/inftrees.c
-	zlib/trees.c
-	zlib/uncompr.c
-	#zlib/zcompress.c
-	zlib/zutil.c
 )
 
 add_library(bzip2 OBJECT
