Detect and set parallel build jobs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,12 @@ if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type: Debug or Release" FORCE)
 endif()
 
+if (DEFINED ENV{NUMBER_OF_PROCESSORS})
+	set(IRR_PARALLEL_BUILD_JOBS $ENV{NUMBER_OF_PROCESSORS})
+else()
+	set(IRR_PARALLEL_BUILD_JOBS 8)
+endif()
+
 macro(irr_adjust_flags)
 	option(IRR_GCC_SANITIZE_ADDRESS OFF)
 	option(IRR_GCC_SANITIZE_THREAD OFF)
