--- a/3rdparty/CEGUI/CMakeLists.txt
+++ b/3rdparty/CEGUI/CMakeLists.txt
@@ -2,7 +2,8 @@ if (IRR_BUILD_CEGUI)
 
 set(CEGUI_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cegui)
 set(CEGUI_BUILD_PATH ${CMAKE_CURRENT_BINARY_DIR}/build)
-set(CEGUI_INSTALL_PATH ${CEGUI_BUILD_PATH}/install PARENT_SCOPE)
+set(CEGUI_INSTALL_PATH ${CEGUI_BUILD_PATH}/install)
+set(CEGUI_INSTALL_PATH ${CEGUI_INSTALL_PATH} PARENT_SCOPE)
 
 if (MSVC) # only MSVC needs to download and build dependencies of CEGUI
     set(CEGUI_DEPS_URL "https://sourceforge.net/projects/crayzedsgui/files/CEGUI%20Mk-2%20Dependencies/0.8.x/cegui-deps-0.8.x-src.zip/download")
@@ -71,6 +72,9 @@ if (MSVC) # only MSVC needs to download and build dependencies of CEGUI
     )
     message(STATUS "Installing done")
 
+else()
+    find_package(EXPAT REQUIRED)
+    find_package(Freetype REQUIRED)
 endif()
 
 message(STATUS "Building CEGUI")
@@ -84,13 +88,23 @@ execute_process(
 execute_process(
     COMMAND ${CMAKE_COMMAND} ${CEGUI_PATH}
         -DCMAKE_INSTALL_PREFIX=${CEGUI_INSTALL_PATH}
+        -DCEGUI_INSTALL_PKGCONFIG=OFF
         -DCEGUI_BUILD_APPLICATION_TEMPLATES=OFF
+        -DCEGUI_BUILD_PYTHON_MODULES=OFF
+        -DCEGUI_BUILD_LUA_MODULE=OFF
+        -DCEGUI_BUILD_XMLPARSER_XERCES=OFF
+        -DCEGUI_BUILD_XMLPARSER_TINYXML=OFF
+        -DCEGUI_BUILD_XMLPARSER_TINYXML2=OFF
+        -DCEGUI_BUILD_XMLPARSER_LIBXML2=OFF
+        -DCEGUI_BUILD_XMLPARSER_RAPIDXML=OFF
+        -DCEGUI_BUILD_XMLPARSER_EXPAT=ON
+        -DCEGUI_OPTION_DEFAULT_XMLPARSER=ExpatParser
         -DCEGUI_BUILD_IMAGECODEC_STB=ON
         -DCEGUI_BUILD_RENDERER_OPENGL3=ON
         -DCEGUI_SAMPLES_ENABLED=OFF
         -DCEGUI_BUILD_STATIC_CONFIGURATION=ON
         -DCEGUI_BUILD_STATIC_FACTORY_MODULE=ON
-        -DCMAKE_INSTALL_PREFIX=${CEGUI_INSTALL_PATH}
+        -DCEGUI_STATIC_XMLPARSER_MODULE=CEGUIExpatParser
     WORKING_DIRECTORY ${CEGUI_BUILD_PATH}
 )
 
