Enable PCRE for CEGUI because layout uses it

--- a/3rdparty/CEGUI/CMakeLists.txt
+++ b/3rdparty/CEGUI/CMakeLists.txt
@@ -50,7 +50,7 @@ if (MSVC) # only MSVC needs to download and build dependencies of CEGUI
             -DCEGUI_BUILD_GLM=ON
             -DCEGUI_BUILD_LUA=OFF
             -DCEGUI_BUILD_MINIZIP=OFF
-            -DCEGUI_BUILD_PCRE=OFF
+            -DCEGUI_BUILD_PCRE=ON
             -DCEGUI_BUILD_SILLY=OFF
             -DCEGUI_BUILD_TINYXML=OFF
             -DCEGUI_BUILD_TOLUAPP=OFF
@@ -89,7 +89,7 @@ execute_process(
         -DCMAKE_INSTALL_PREFIX=${CEGUI_INSTALL_PATH}
         -DCEGUI_INSTALL_PKGCONFIG=OFF
         -DCEGUI_BUILD_APPLICATION_TEMPLATES=OFF
-        -DCEGUI_HAS_PCRE_REGEX=OFF
+        -DCEGUI_HAS_PCRE_REGEX=ON
         -DCEGUI_BUILD_PYTHON_MODULES=OFF
         -DCEGUI_BUILD_LUA_MODULE=OFF
         -DCEGUI_BUILD_XMLPARSER_XERCES=OFF
